--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href='.reset.css' type="text/css" />
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins:600' type="text/css" />
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Work+Sans:300,500' type="text/css" />
-    <title>Jamming</title>
+    <title>Jammming</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
